@@ -18,11 +18,4 @@
 -Dfile.encoding=UTF-8
 -Djava.net.preferIPv4Stack=true
 
-# -XX:+UseG1GC
-# -XX:+UseNUMA
-# -XX:-UseSerialGC
-# -XX:-UseParNewGC
-# -XX:-UseParallelGC
-# -XX:-UseParallelOldGC
-# -XX:-UseConcMarkSweepGC
-# -XX:+UseCompressedOops
+-Didea.suppressed.plugins.set.selector=radler
